WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31398
[Chromium] reload-subframe-object.html fails
https://bugs.webkit.org/show_bug.cgi?id=31398
Summary
[Chromium] reload-subframe-object.html fails
Adam Barth
Reported
2009-11-12 02:41:25 PST
It should pass. See
http://code.google.com/p/chromium/issues/detail?id=26253
Attachments
Patch
(2.27 KB, patch)
2009-11-12 02:56 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2009-11-12 02:56:15 PST
Created
attachment 43052
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2009-11-12 09:16:58 PST
Comment on
attachment 43052
[details]
Patch r=me.
WebKit Commit Bot
Comment 3
2009-11-12 12:04:04 PST
Comment on
attachment 43052
[details]
Patch Clearing flags on attachment: 43052 Committed
r50891
: <
http://trac.webkit.org/changeset/50891
>
WebKit Commit Bot
Comment 4
2009-11-12 12:04:12 PST
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 5
2009-11-12 16:13:45 PST
/me beats abarth and dglazkov with a wet noodle for abarth's email address in the changelog.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug