2009-11-12  Adam Barth  <abarth>

Reviewed by Dimitri Glazkov.

        [Chromium] reload-subframe-object.html fails
        https://bugs.webkit.org/show_bug.cgi?id=31398

        More closely match FrameLoaderClient.mm.  Turns out we don't want to
        use MIMETypeRegistry::getMIMETypeForPath because we can't distinguish
        between application/octet-stream and lack of knowledge of the MIME
        type.

        Covered by reload-subframe-object.html.

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::objectContentType):

git-svn-id: svn://svn.chromium.org/blink/trunk@50891 bbb929c8-8fbe-4397-9dbb-9b2b20218538